more header setup

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -4,13 +4,7 @@
 }
 
 .header-logo {
-  height: 5rem;
-  padding: 1rem;
-  padding-bottom: 0;
-}
-
-.col-3 {
-  flex-basis: calc(100% / 3);
+  height: 4rem;
 }
 
 .whole-pg-cont {
@@ -28,21 +22,12 @@
 }
 
 .pg-id-cont {
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
-  padding: 0.5rem 0;
 }
 
 .pg-id-img-cont {
   display: flex;
   align-items: center;
   width: 41%;
-}
-
-.pg-id-img {
-  width: 95%;
-}
-
-.pg-id-txt {
-  font-size: 0.75rem;
 }
