--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -21,7 +21,7 @@
   flex-direction: column;
 }
 
-.just-cent {
+.header-logo-cont {
   justify-content: center;
 }
 
@@ -53,8 +53,6 @@
   height: 3rem;
 }
 
-.indicator-circle {
-  border-radius: 50%;
-  background-color: #0e9aa745;
-  height: 3rem;
+.just-cent {
+  justify-content: center;
 }
