--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -32,28 +32,23 @@
   background-color: #d9cab345;
 }
 
-.footer-icon {
-  width: 2rem;
-  margin: 0.5rem;
-}
-
 .indicator-circle {
   border-radius: 50%;
   background-color: #0e9aa745;
-  height: 3rem;
+}
+
+.menu-cont {
+  background-color: white;
 }
 
 .menu-txt {
   font-family: Oswald, sans-serif;
   font-weight: 300;
-  text-align: center;
-  margin: 0;
 }
 
 .menu-footer-cont {
   font-size: 0.5rem;
   background-color: white;
-  text-align: center;
 }
 
 .fa-angle-double-left:hover,
