--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -130,8 +130,8 @@
 }
 
 .exp-form-cont {
-  width: 85%;
-  border-radius: 5rem;
+  width: 90%;
+  border-radius: 3rem;
 
   /* border: 0.25rem solid rgb(0 0 0 / 40%); */
   filter: drop-shadow(0 0 0.25rem black);
@@ -141,6 +141,10 @@
 
 .exp-form {
   padding: 1rem;
+}
+
+.padding-extra {
+  padding: 0.5rem 1rem 0 2rem;
 }
 
 .exp-toggle-txt {
@@ -157,13 +161,15 @@
 }
 
 .form-label {
-  width: 90%;
-  padding: 0.25rem;
+  padding: 0.5rem 0.25rem;
 }
 
 .form-input {
   min-width: 90%;
   border-radius: 5rem;
+  height: 2rem;
+  border: 0.01rem solid #0e9aa7;
+  filter: drop-shadow(0 0.1rem 0.1rem #29292960);
 }
 
 .form-label-txt {
@@ -174,15 +180,22 @@
 
 .button-cont {
   justify-content: space-between;
+  padding: 0.5rem;
+  align-items: center;
+  height: 4rem;
 }
 
 .sm-button {
   background-color: #efe9df;
+  height: 2.5rem;
+  border-radius: 1.25rem;
+  width: 5.5rem;
 }
 
 .form-input::placeholder {
-  text-align: center;
+  text-align: left;
   font-family: noto-sans, sans-serif;
   font-weight: 700;
+  padding-left: 0.25rem;
   color: #29292960;
 }
