added pointer:hover to various elements

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -52,6 +52,8 @@
 }
 
 .fa-angle-double-left:hover,
+.sm-button:hover,
+.form-input:hover,
 .header-bars:hover,
 .create-icon:hover,
 .header-logo-cont:hover {
