--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -131,12 +131,7 @@
 
 .exp-form-cont {
   width: 90%;
-  border-radius: 3rem;
-
-  /* border: 0.25rem solid rgb(0 0 0 / 40%); */
-  filter: drop-shadow(0 0 0.25rem black);
   margin: auto;
-  background-color: white;
 }
 
 .exp-form {
@@ -147,30 +142,13 @@
   padding: 0.5rem 1rem 0 2rem;
 }
 
-.exp-toggle-txt {
-  font-family: noto-sans, sans-serif;
-  color: #292929c0;
-  font-weight: 700;
-  font-size: 0.5rem;
-  filter: drop-shadow(0 0 2rem rgb(0 0 0 / 15.1%));
-}
-
-.toggle-highlight {
-  background-color: #0e9aa765;
-  border: 0.05rem solid rgb(0 0 0 / 26.7%);
-}
-
 .form-label {
   padding: 0.5rem 0.25rem;
 }
 
 .form-input {
   min-width: 90%;
-  border-radius: 5rem;
   height: 2rem;
-  border: 0.01rem solid #0e9aa7;
-  filter: drop-shadow(0 0.1rem 0.1rem #29292960);
-  background-color: white;
 }
 
 .form-input-extra-padding {
@@ -178,8 +156,6 @@
 }
 
 .form-label-txt {
-  font-family: noto-sans, sans-serif;
-  font-size: 0.5rem;
   margin: 0.25rem;
 }
 
@@ -191,16 +167,63 @@
 }
 
 .sm-button {
-  background-color: #efe9df;
   height: 2.5rem;
-  border-radius: 1.25rem;
   width: 5.5rem;
+}
+
+.table-cont {
+  justify-content: center;
+}
+
+.table-header {
+  font-size: 0.85rem;
+  margin: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.shaded {
+  background-color: #f2f2f275;
+}
+
+.table-txt {
+  font-family: noto-sans, sans-serif;
+  font-size: 0.75rem;
+  font-weight: 100;
+  padding: 0 0.5rem;
+  text-align: center;
+}
+
+.table-item {
+  justify-content: space-between;
+  margin: 0 1rem;
+  border-radius: 1rem;
+  align-items: center;
+}
+
+.flex-30 {
+  flex-basis: 30%;
+}
+
+.flex-10 {
+  flex-basis: 10%;
+}
+
+.flex-40 {
+  flex-basis: 40%;
+  justify-content: space-evenly;
+}
+
+.fa-ellipsis-v {
+  text-align: center;
 }
 
 .form-input::placeholder {
   text-align: left;
-  font-family: noto-sans, sans-serif;
-  font-weight: 700;
   padding-left: 0.25rem;
-  color: #29292960;
+}
+
+.disp-none {
+  display: none;
+  color: #f2f2f200;
 }
