--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -15,6 +15,7 @@
 .whole-pg-cont {
   display: flex;
   flex-direction: column;
+  margin: 0.5rem;
 }
 
 .scroll {
@@ -29,7 +30,7 @@
 }
 
 .header-cont {
-  height: 20%;
+  height: 20vh;
 }
 
 .header-logo-cont {
@@ -60,11 +61,12 @@
   justify-content: space-between;
   align-items: center;
   display: flex;
+  margin-top: auto;
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 3rem;
-  z-index: 1;
+  z-index: 2;
 }
 
 .footer-icon {
@@ -88,8 +90,8 @@
   left: 0;
   right: 0;
   display: flex;
-  justify-content: flex-start;
-  height: 116%;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu-cont {
@@ -97,7 +99,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 33%;
-  z-index: 2;
+  z-index: 3;
 }
 
 .menu-header-cont {
@@ -140,13 +142,16 @@
 }
 
 .exp-form-cont {
-  width: 90%;
-  margin: auto;
+  width: 80%;
   z-index: 1;
+  margin: auto;
+  min-width: 18rem;
+  max-width: 25rem;
 }
 
 .exp-form {
   padding: 1rem;
+  margin: 0.5rem;
 }
 
 .padding-extra {
@@ -232,6 +237,10 @@
   position: absolute;
   top: 1rem;
   right: 1rem;
+}
+
+.modal-cont {
+  max-height: 20rem;
 }
 
 .modal-icon-cont {
