--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -35,7 +35,7 @@
 }
 
 .header-cont {
-  height: 20vh;
+  height: 23vh;
 }
 
 .header-logo-cont {
@@ -214,21 +214,25 @@
   align-items: center;
 }
 
+.flex-10 {
+  flex-basis: 10%;
+}
+
 .flex-30 {
   flex-basis: 30%;
 }
 
-.flex-10 {
-  flex-basis: 10%;
+.flex-40 {
+  flex-basis: 40%;
+  justify-content: space-evenly;
 }
 
 .flex-90 {
   flex-basis: 90%;
 }
 
-.flex-40 {
-  flex-basis: 40%;
-  justify-content: space-evenly;
+.flex-100 {
+  flex-basis: 100%;
 }
 
 .fa-ellipsis-v {
