--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -276,20 +276,8 @@
   display: flex;
   align-items: center;
   flex-basis: 100%;
-  border-radius: 1rem;
-  background-color: #0e9aa745;
   max-height: 2.75rem;
-}
-
-.lrg-button-txt {
-  font-family: noto-sans, sans-serif;
-  font-weight: 600;
-  font-size: 1rem;
-  text-decoration: none;
-}
-
-ul.no-bullets {
-  list-style-type: none;
+  min-width: 18rem;
 }
 
 ul.no-bullets > li {
@@ -297,13 +285,6 @@ ul.no-bullets > li {
   display: flex;
   justify-content: center;
   height: 3rem;
-}
-
-ul.no-bullets > li > a {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
 }
 
 .budget-width {
@@ -315,25 +296,10 @@ ul.no-bullets > li > a {
   align-items: center;
 }
 
-.oswald-semi-bld {
-  font-family: Oswald, sans-serif;
-  font-weight: 600;
-  font-size: 0.75rem;
-}
-
-.oswald-norm {
-  font-family: Oswald, sans-serif;
-  font-weight: 200;
-  font-size: 0.5rem;
-}
-
 .budget-info-cont {
   align-items: center;
   height: 25vh;
   justify-content: space-evenly;
-  border-radius: 1rem;
-  filter: drop-shadow(0 0 0.25rem black);
-  background-color: white;
   width: 80%;
   margin: 2rem auto;
   min-width: 18rem;
