--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -167,13 +167,23 @@ ul.no-bullets > li > a {
 .oswald-semi-bld {
   font-family: Oswald, sans-serif;
   font-weight: 600;
-  font-size: 0.75rem;
+  font-size: 1.25rem;
+}
+
+.oswald-norm {
+  font-family: Oswald, sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
 }
 
 .budget-info-cont {
   border-radius: 1rem;
   filter: drop-shadow(0 0 0.25rem black);
   background-color: white;
+}
+
+.summary-dropdown-title {
+  font-size: 0.75rem;
 }
 
 i:hover,
